# Tetris

./: .gitignore  CMakeLists.txt  README.md
src/core/: game.c  game.h  int_queue.c  int_queue.h  main.c  main.h  renderer.c  renderer.h  utils.c  utils.h
src/save/: score_data.c  score_data.h
src/tests/: tetris_tests.c  tetris_tests.h
src/tetris/: CMakeLists.txt  piece.c  piece.h  piece_grid.c  piece_grid.h  tetris.h  tetris_constants.h
